<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="hometitle" />
    <string name="hometitle_real">Restaurant</string>
    <string name="starters">Entrées</string>
    <string name="meals">Plats</string>
    <string name="desert">Desserts</string>
    <string name="welcome">Bienvenue chez</string>
    <string name="titleCat" />
    <string name="item" />
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="IngredientsText">Ingrédients:</string>
    <string name="TotalText">Total : 0$</string>
    <string-array name="tab_starters">
        <item>Salade</item>
        <item>Soupes</item>
        <item>Tapas</item>
    </string-array>
    <string-array name="tab_mains">
        <item>Hamburger</item>
        <item>Steack et Frites</item>
        <item>Pizza</item>
        <item>Pâtes Carbonara</item>
        <item>Poisson</item>
    </string-array>
    <string-array name="tab_desserts">
        <item>Flan</item>
        <item>Brownie</item>
        <item>Café gourmand</item>
        <item>Crêpe au Nutella</item>
    </string-array>
</resources>
