<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F00BCD4"
    tools:context=".DetailsActivity">

    <Button
        android:id="@+id/ButtonMinus"
        android:layout_width="90sp"
        android:layout_height="80dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="#009688"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngredientsText"
        tools:ignore="TextContrastCheck"
        tools:text="@string/btn_minus" />

    <TextView
        android:id="@+id/DishTitle"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/titleCat"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager2" />

    <TextView
        android:id="@+id/IngredientsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DishTitle"
        tools:text="@string/IngredientsText" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="409dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#009688"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/TotalText" />

    <TextView
        android:id="@+id/QuantityDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/ButtonPlus"
        app:layout_constraintStart_toEndOf="@+id/ButtonMinus"
        app:layout_constraintTop_toBottomOf="@+id/IngredientsText" />

    <Button
        android:id="@+id/ButtonPlus"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#009688"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngredientsText"
        tools:ignore="TextContrastCheck"
        tools:text="@string/btn_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>